--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Вам необходимо указать токен от BotFather
-TOKEN=7797497169:AAGyRO7oH7SSmbI660EDJ3h7DxboBUVnvIA
+TOKEN=
 NAME_DB=products.db
 VERSION=0.0.1
 AUTHOR=myd_adc
